# rust_ml_model_serving

./: Cargo.toml  Dockerfile
src/: main.rs  utils.rs
src/utils/: download_util.rs
