[package]
name = "model_serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
tch = "0.11.0"
reqwest="0.11.16"
tempfile="3.5.0"
bytes = "1.4.0"
